@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/blender/blender-2.49b.ebuild,v 1.3 2010/05/31 15:02:53 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/blender/blender-2.49b.ebuild,v 1.4 2010/11/08 22:00:56 maekke Exp $
 
 EAPI=2
 
@@ -17,7 +17,6 @@ LICENSE="|| ( GPL-2 BL BSD )"
 KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
 
 RDEPEND="ffmpeg? ( >=media-video/ffmpeg-0.5[encode,theora] )
-	media-libs/jpeg
 	media-libs/openjpeg
 	media-libs/tiff
 	>=dev-lang/python-2.5
@@ -31,8 +30,8 @@ RDEPEND="ffmpeg? ( >=media-video/ffmpeg-0.5[encode,theora] )
 	blender-game? ( >=media-libs/libsdl-1.2[joystick] )
 	>=media-libs/libsdl-1.2
 	ogg? ( media-libs/libogg )
+	virtual/jpeg
 	virtual/opengl"
-
 DEPEND=">=dev-util/scons-0.98
 	sys-devel/gcc[openmp?]
 	x11-base/xorg-server
