@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/blender
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/blender/ChangeLog,v 1.185 2010/05/31 15:02:53 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/blender/ChangeLog,v 1.186 2010/11/08 22:00:56 maekke Exp $
+
+  08 Nov 2010; Markus Meier <maekke@gentoo.org> blender-2.48a-r3.ebuild,
+  blender-2.49a.ebuild, blender-2.49b.ebuild:
+  change jpeg dep to virtual/jpeg
 
   31 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   blender-2.48a-r3.ebuild, blender-2.49a.ebuild, blender-2.49b.ebuild:
