@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/autopano-sift-C
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/autopano-sift-C/ChangeLog,v 1.12 2010/01/09 00:06:37 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/autopano-sift-C/ChangeLog,v 1.13 2010/11/08 21:56:41 maekke Exp $
+
+  08 Nov 2010; Markus Meier <maekke@gentoo.org>
+  autopano-sift-C-2.5.1.ebuild:
+  change jpeg dep to virtual/jpeg
 
   09 Jan 2010; Markus Meier <maekke@gentoo.org>
   -autopano-sift-C-2.5.0.ebuild:
